--- a/NotSpotify/App.xaml
+++ b/NotSpotify/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:NotSpotify"
              StartupUri="./MVVM/View/MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="./Theme/Spotify.ListViewTheme.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
