--- a/NotSpotify/MVVM/View/MainWindow.xaml
+++ b/NotSpotify/MVVM/View/MainWindow.xaml
@@ -3,12 +3,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:NotSpotify"
+        xmlns:local="clr-namespace:NotSpotify" xmlns:viewmodel="clr-namespace:NotSpotify.MVVM.ViewModel"
         mc:Ignorable="d"
         Background="#222222"
         WindowStyle="None"
         ResizeMode="NoResize"
         Title="MainWindow" Height="800" Width="450">
+    <Window.DataContext>
+        <viewmodel:MainViewModel/>
+    </Window.DataContext>
     <DockPanel>
         <Grid DockPanel.Dock="Top">
             <Image Height="225"
@@ -34,10 +37,12 @@
             </StackPanel>
         </Grid>
 
-        <StackPanel Background="#252525"
-                    ScrollViewer.CanContentScroll="False">
+        <ListView Background="#252525"
+                    ScrollViewer.CanContentScroll="False"
+                  ItemsSource="{Binding Songs}"
+                  Style="{StaticResource ListStyle}">
             
-        </StackPanel>
+        </ListView>
     </DockPanel>
     
 </Window>
